ok changes now.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,9 @@ pid /tmp/nginx.pid;
 events {
   # configuration of connection processing
 }
+
 http {
+  # Configuration specific to HTTP and affecting all virtual servers
   http2 on;
   client_body_temp_path   /tmp/client_temp;
   proxy_temp_path         /tmp/proxy_temp_path;
@@ -36,12 +38,11 @@ http {
     location ~ ^/flasgger_static/(.*)$ {
 	    alias /usr/share/nginx/html/static_files_flasgger/$1;
     }
-    # Static files (css, js, images)
-    location ~* ^/(.*\.(css|js|jpg|jpeg|png|gif|ico|svg|webp|html))$ {
-      try_files $uri =404;
+
+    location ~* ^/(|.*\.css|.*\.js|.*\.(jpg|jpeg|png|gif|bmp|ico|svg|webp|html))$ {
+        try_files $uri $uri/ =404;
     }
 
-    # Proxy all requests under /smartsfilter/ → Flask API
     location / {
       # NOTE: ideally would use environment variables here, but
       # using environment variables is not natively supported by nginx
@@ -65,4 +66,3 @@ http {
     }
   }
 }
-
