--- a/app/.env.example
+++ b/app/.env.example
@@ -1,4 +1,7 @@
-APP_NAME=SmartFilter
-APP_PORT=8000
-APP_URL=localhost:8000
-FLASK_ENV=development
+APP_NAME=
+APP_PORT=
+APP_URL=
+FLASK_ENV=
+SMARTSFILTER_NGINX_SSL_PORT=
+SMARTSFILTER_NGINX_HTTP_PORT=
+URL_PREFIX=
