--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,9 @@
 pid /tmp/nginx.pid;
 events {
-  # configuration of connection processing
+  worker_connections 1024;
 }
 
 http {
-  # Configuration specific to HTTP and affecting all virtual servers
-  http2 on;
   client_body_temp_path   /tmp/client_temp;
   proxy_temp_path         /tmp/proxy_temp_path;
   fastcgi_temp_path       /tmp/fastcgi_temp;
@@ -14,55 +12,64 @@ http {
   server_tokens           off;
   client_body_buffer_size 1k;
   include                 /etc/nginx/mime.types;
+  default_type            application/octet-stream;
 
   server {
-    server_name smartsfilter.localhost;
     listen 80;
-    listen 443;
-    root /usr/share/nginx/html/static_files_smartsfilter/;
-    # https://syslink.pl/cipherlist/
-    ssl_protocols TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
-    ssl_ecdh_curve secp384r1;
-    ssl_session_timeout  10m;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_tickets off; # Requires nginx >= 1.5.9
-    ssl_stapling on; # Requires nginx >= 1.3.7
-    ssl_stapling_verify on; # Requires nginx => 1.3.7
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-    index index.html; 
-    location ~ ^/flasgger_static/(.*)$ {
-	    alias /usr/share/nginx/html/static_files_flasgger/$1;
+    server_name localhost;
+
+    # Serve UI static files for the /smartsfilter path
+    location /smartsfilter/ {
+        alias /usr/share/nginx/html/static_files_smartsfilter/;
+        try_files $uri $uri/ /smartsfilter/index.html;
+        
+        # Handle React Router
+        location ~ ^/smartsfilter/(?!api|apidocs|flasgger_static) {
+            try_files $uri $uri/ /smartsfilter/index.html;
+        }
     }
 
-    location ~* ^/(|.*\.css|.*\.js|.*\.(jpg|jpeg|png|gif|bmp|ico|svg|webp|html))$ {
-        try_files $uri $uri/ =404;
-    }
-
+    # Serve UI static files at root (fallback)
     location / {
-      # NOTE: ideally would use environment variables here, but
-      # using environment variables is not natively supported by nginx
-      # - not worth the additional complexity of envsubst here
-      # 8001 should match APP_PORT
-      proxy_pass http://smartsfilter_api:11412/;
-      #return 500;
-      proxy_set_header HOST $host;
-      proxy_set_header X-Query-String $query_string;
-      proxy_redirect off;
-      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header  X-Real-IP $remote_addr;
-      proxy_set_header  X-Forwarded-Proto $scheme;
-      proxy_set_header  X-Forwarded-Ssl on; # Optional
-      proxy_set_header  X-Forwarded-Port $server_port;
-      proxy_set_header  X-Forwarded-Host $host;
-      proxy_pass_request_headers on;
-      proxy_connect_timeout 60s;
-      proxy_send_timeout 60s;
-      proxy_read_timeout 60s;
+        root /usr/share/nginx/html/static_files_smartsfilter/;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # API endpoints
+    location /smartsfilter/api/ {
+        proxy_pass http://smartsfilter_api:11412/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_pass_request_headers on;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # API docs
+    location /smartsfilter/apidocs/ {
+        proxy_pass http://smartsfilter_api:11412/apidocs/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Flasgger static files
+    location /smartsfilter/flasgger_static/ {
+        alias /usr/share/nginx/html/static_files_flasgger/;
+    }
+
+    # Handle static assets (CSS, JS, images) with proper MIME types
+    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
+        root /usr/share/nginx/html/static_files_smartsfilter/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
   }
 }
