fixed static files serving for UI.

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,60 +16,43 @@ http {
 
   server {
     listen 80;
-    server_name localhost;
-
-    # Serve UI static files for the /smartsfilter path
-    location /smartsfilter/ {
-        alias /usr/share/nginx/html/static_files_smartsfilter/;
-        try_files $uri $uri/ /smartsfilter/index.html;
-        
-        # Handle React Router
-        location ~ ^/smartsfilter/(?!api|apidocs|flasgger_static) {
-            try_files $uri $uri/ /smartsfilter/index.html;
-        }
-    }
-
-    # Serve UI static files at root (fallback)
+    root /usr/share/nginx/html/static_files_smartsfilter/;
+    index index.html;
+    
+    # Serve static files for the React UI
     location / {
-        root /usr/share/nginx/html/static_files_smartsfilter/;
         try_files $uri $uri/ /index.html;
     }
-
-    # API endpoints
-    location /smartsfilter/api/ {
+    
+    # Serve Flasgger static files for API docs
+    location /flasgger_static/ {
+        alias /usr/share/nginx/html/static_files_flasgger/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Proxy API requests to the backend
+    location /api/ {
         proxy_pass http://smartsfilter_api:11412/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_pass_request_headers on;
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
-
-    # API docs
-    location /smartsfilter/apidocs/ {
+    
+    # Proxy API docs requests to the backend
+    location /apidocs/ {
         proxy_pass http://smartsfilter_api:11412/apidocs/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Flasgger static files
-    location /smartsfilter/flasgger_static/ {
-        alias /usr/share/nginx/html/static_files_flasgger/;
-    }
-
-    # Handle static assets (CSS, JS, images) with proper MIME types
-    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
-        root /usr/share/nginx/html/static_files_smartsfilter/;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        try_files $uri =404;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
   }
 }
