--- a/compose-production.yml
+++ b/compose-production.yml
@@ -1,14 +1,12 @@
 services:
   smartsfilter_api:
-    container_name: smartsfilter_api
+    restart: always
     build:
       context: ./app
-      dockerfile: Dockerfile
-    restart: always
-    env_file:
-      - .env
     environment:
       - APP_PORT=${APP_PORT}
+    env_file:
+      - .env
     volumes:
       - static_files_flasgger:/app/flasgger_static/
     networks:
@@ -16,17 +14,17 @@ services:
 
   smartsfilter_ui:
     build:
-      context: https://github.com/unmtransinfo/Badapple2-UI.git#main
+      context: https://github.com/unmtransinfo/SmartFilter-UI.git
     environment:
       - NODE_OPTIONS=--openssl-legacy-provider
     env_file:
       - .env
     volumes:
-      - static_files_smartsfilter:/app/build/
+      - static_files_badapple:/app/build/
     networks:
       - smartsfilter_net
 
-  smartfilter_nginx:
+  smartsfilter_nginx:
     restart: always
     image: nginx:1
     volumes:
@@ -35,19 +33,20 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - nginx:/etc/nginx
     ports:
-      - "8444:80"
-    networks:
-      - smartsfilter_net
+      - "${SMARTSFILTER_NGINX_SSL_PORT:-443}:443"
+      - "${SMARTSFILTER_NGINX_HTTP_PORT:-80}:80"
     depends_on:
       smartsfilter_api:
         condition: service_started
       smartsfilter_ui:
         condition: service_started
+    networks:
+      - smartsfilter_net
 
-networks:
-  smartsfilter_net:
-    
 volumes:
   static_files_smartsfilter:
   static_files_flasgger:
   nginx:
+
+networks:
+  smartsfilter_net:
