--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_NAME=Smartsfilter-API
 APP_PORT=11412                     # The port your Flask app listens on inside the container
 URL_PREFIX=smartsfilter           # Prefix for API and Swagger paths
 APP_URL=chiltepin.health.unm.edu/${URL_PREFIX}
+PUBLIC_URL=${URL_PREFIX}
 
 # Nginx ports on the host
 SMARTSFILTER_NGINX_SSL_PORT=8445
