--- a/nginx.conf
+++ b/nginx.conf
@@ -39,7 +39,7 @@ http {
 	    alias /usr/share/nginx/html/static_files_flasgger/$1;
     }
 
-    location ~* ^/(|.*\.css|.*\.js|.*\.(jpg|jpeg|png|gif|bmp|ico|svg|webp|html))$ {
+    location ~* ^/(|.*\.css|.*\.js|.*\.(jpg|jpeg|smi|sma|png|gif|bmp|ico|svg|webp|html))$ {
         try_files $uri $uri/ =404;
     }
 
