added support for post which can handle large batch processing.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_ENV="production"
+FLASK_ENV="development"
 # App configuration
 APP_NAME=Smartsfilter-API
 APP_PORT=11412                     # The port your Flask app listens on inside the container
